# crypto-market-data-ticker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/market_data_client/: CMakeLists.txt
components/market_data_client/host_test/: Makefile  test_market_data_json_scanner.c  test_market_data_klines_parser.c  test_market_data_symbol_parser.c  test_market_data_ticker_parser.c  test_market_data_url.c
components/market_data_client/include/: market_data_client.h  market_data_json_scanner.h
components/market_data_client/src/: market_data_client.c  market_data_http.c  market_data_http.h  market_data_json_scanner.c  market_data_klines_parser.c  market_data_klines_parser.h  market_data_symbol_parser.c  market_data_symbol_parser.h  market_data_ticker_parser.c  market_data_ticker_parser.h  market_data_url.c  market_data_url.h
components/market_data_ws_client/: CMakeLists.txt  idf_component.yml
components/market_data_ws_client/host_test/: Makefile  test_market_data_ws_control.c  test_market_data_ws_stream_parser.c  test_market_data_ws_url.c
components/market_data_ws_client/include/: market_data_kline_update.h  market_data_ws_client.h
components/market_data_ws_client/src/: market_data_ws_client.c  market_data_ws_control.c  market_data_ws_control.h  market_data_ws_stream_parser.c  market_data_ws_stream_parser.h  market_data_ws_url.c  market_data_ws_url.h
docs/: architecture.md  roadmap.md  testing.md
main/: CMakeLists.txt  Kconfig.projbuild  dev_screenshot_console.c  dev_screenshot_console.h  display_ui.c  ota_console.c  (+2 more)
(+53 files in other folders)
